@@ -29,6 +29,7 @@
 #include "om/omenquire.h"
 
 class IRDatabase;
+class StatsSource;
 
 class RSetItem {
     public:
@@ -59,6 +60,7 @@ class RSet {
 	void will_want_reltermfreq(om_termname tname);
 
 	void calculate_stats();
+	void give_stats_to_statssource(StatsSource &statssource);
 
 	om_doccount get_rsize() const;
 	om_doccount get_reltermfreq(om_termname tname) const;
